Dirty tagging via extension data is working.